--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body class="poppins-regular">
     <header>
-        <nav>
+        <nav id="nav_1">
             <h2>
                 Influencer products
             </h2>
@@ -55,9 +55,21 @@
                 </li>
             </ul>
         </nav>
-        <div class="hero">
+        <nav id="nav_2">
+           <a href="">
+            <i class="fa-solid fa-bars"></i>
+           </a>
+            <h2>
+                Influencer Gear
+            </h2>
+            <a href="">
+                <i class="fa-solid fa-cart-shopping"></i>
+            </a>
+            </nav>
+           
+        <div class="hero" id="hero_area">
             <div class="hero_text">
-                <h1>
+                <h1 id="heading1">
                     Start your Journey as
                     Influencer
                 </h1>
@@ -66,13 +78,13 @@
                     faucibus.
                 </p>
 
-                <a href="">
-                    Preebook now <i class="fa-solid fa-arrow-right"></i>
+                <a id="btn" href="">
+                     Preebook now <i class="fa-solid fa-arrow-right"></i>
                 </a>
 
             </div>
-            <div class="hero_image">
-                <img src="influencer-gear/images/main-camera.png" alt="">
+            <div class="hero_img">
+                <img id="camra" src="influencer-gear/images/main-camera.png" alt="">
             </div>
         </div>
         <div class="companys">
@@ -82,7 +94,7 @@
             <img src="influencer-gear/logos/Ebay.svg" alt="">
             <img src="influencer-gear/logos/Rakuten.svg" alt="">
             <img src="influencer-gear/logos/Walmart.svg" alt="">
-            <img src="influencer-gear/logos/Target.svg" alt="">
+            <img src="influencer-gear/logos/Target.svg">
         </div>
     </header>
     <main></main>
