--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </li>
             </ul>
         </nav>
-        <nav id="nav_2">
+        <nav id="nav_2" >
             <a href="">
                 <i class="fa-solid fa-bars"></i>
             </a>
@@ -78,7 +78,7 @@
                     faucibus.
                 </p>
 
-                <a id="btn" href="">
+                <a id="btn" class="button" href="">
                     Preebook now <i class="fa-solid fa-arrow-right"></i>
                 </a>
 
@@ -104,17 +104,17 @@
         <div id="product">
             <div class="product_box">
                 <a href="">
-                   <div class="img_box">
-                     <img src="influencer-gear/images/tripod.png" alt="">
-                   </div>
+                    <div class="img_box">
+                        <img src="influencer-gear/images/tripod.png" alt="">
+                    </div>
                 </a>
                 <div>
                     <h2>
                         Flex Tripod
                     </h2>
-                    <h2>
+                    <h3>
                         $50.48
-                    </h2>
+                    </h3>
                     <div class="icons">
                         <div>
                             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
@@ -135,17 +135,17 @@
             </div>
             <div class="product_box">
                 <a href="">
-                   <div class="img_box">
-                     <img src="influencer-gear/images/tripod.png" alt="">
-                   </div>
+                    <div class="img_box">
+                        <img src="influencer-gear/images/mic.png" alt="">
+                    </div>
                 </a>
                 <div>
                     <h2>
-                        Flex Tripod
+                        microphone
                     </h2>
-                    <h2>
-                        $50.48
-                    </h2>
+                    <h3>
+                        $120.25
+                    </h3>
                     <div class="icons">
                         <div>
                             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
@@ -166,17 +166,17 @@
             </div>
             <div class="product_box">
                 <a href="">
-                   <div class="img_box">
-                     <img src="influencer-gear/images/tripod.png" alt="">
-                   </div>
+                    <div class="img_box">
+                        <img src="influencer-gear/images/airpod.png" alt="">
+                    </div>
                 </a>
                 <div>
                     <h2>
-                        Flex Tripod
+                        Airbuds
                     </h2>
-                    <h2>
-                        $50.48
-                    </h2>
+                    <h3>
+                        $100.00
+                    </h3>
                     <div class="icons">
                         <div>
                             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
@@ -197,17 +197,17 @@
             </div>
             <div class="product_box">
                 <a href="">
-                   <div class="img_box">
-                     <img src="influencer-gear/images/tripod.png" alt="">
-                   </div>
+                    <div class="img_box">
+                        <img src="influencer-gear/images/drone.png" alt="">
+                    </div>
                 </a>
                 <div>
                     <h2>
-                        Flex Tripod
+                        Drone
                     </h2>
-                    <h2>
-                        $50.48
-                    </h2>
+                    <h3>
+                        $980.25
+                    </h3>
                     <div class="icons">
                         <div>
                             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
@@ -228,17 +228,17 @@
             </div>
             <div class="product_box">
                 <a href="">
-                   <div class="img_box">
-                     <img src="influencer-gear/images/tripod.png" alt="">
-                   </div>
+                    <div class="img_box">
+                        <img src="influencer-gear/images/lights.png" alt="">
+                    </div>
                 </a>
                 <div>
                     <h2>
-                        Flex Tripod
+                        Light Setup
                     </h2>
-                    <h2>
-                        $50.48
-                    </h2>
+                    <h3>
+                        $1200.00
+                    </h3>
                     <div class="icons">
                         <div>
                             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
@@ -259,17 +259,17 @@
             </div>
             <div class="product_box">
                 <a href="">
-                   <div class="img_box">
-                     <img src="influencer-gear/images/tripod.png" alt="">
-                   </div>
+                    <div class="img_box">
+                        <img src="influencer-gear/images/setup.png" alt="">
+                    </div>
                 </a>
                 <div>
                     <h2>
-                        Flex Tripod
+                        Photoshoot set
                     </h2>
-                    <h2>
-                        $50.48
-                    </h2>
+                    <h3>
+                        $820.40
+                    </h3>
                     <div class="icons">
                         <div>
                             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
@@ -290,17 +290,17 @@
             </div>
             <div class="product_box">
                 <a href="">
-                   <div class="img_box">
-                     <img src="influencer-gear/images/tripod.png" alt="">
-                   </div>
+                    <div class="img_box">
+                        <img src="influencer-gear/images/camera.png" alt="">
+                    </div>
                 </a>
                 <div>
                     <h2>
-                        Flex Tripod
+                        Vlogging Camera
                     </h2>
-                    <h2>
-                        $50.48
-                    </h2>
+                    <h3>
+                        $1800.80
+                    </h3>
                     <div class="icons">
                         <div>
                             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
@@ -321,17 +321,17 @@
             </div>
             <div class="product_box">
                 <a href="">
-                   <div class="img_box">
-                     <img src="influencer-gear/images/tripod.png" alt="">
-                   </div>
+                    <div class="img_box">
+                        <img src="influencer-gear/images/single-light.png" alt="">
+                    </div>
                 </a>
                 <div>
                     <h2>
-                        Flex Tripod
+                        Green Screen
                     </h2>
-                    <h2>
-                        $50.48
-                    </h2>
+                    <h3>
+                        $25.48
+                    </h3>
                     <div class="icons">
                         <div>
                             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
@@ -352,17 +352,17 @@
             </div>
             <div class="product_box">
                 <a href="">
-                   <div class="img_box">
-                     <img src="influencer-gear/images/tripod.png" alt="">
-                   </div>
+                    <div class="img_box">
+                        <img src="influencer-gear/images/action.png" alt="">
+                    </div>
                 </a>
                 <div>
                     <h2>
-                        Flex Tripod
+                        Action Camera
                     </h2>
-                    <h2>
-                        $50.48
-                    </h2>
+                    <h3>
+                        $380.00
+                    </h3>
                     <div class="icons">
                         <div>
                             <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
@@ -381,11 +381,49 @@
                     </p>
                 </div>
             </div>
-          
         </div>
-      
+        <div class="main_last_stage">
+            <h4>
+                <a class="button" href="">
+                    See More <i class="fa-solid fa-arrow-right" style="color: #ff4d4d;"></i>
+                </a>
+            </h4>
+            <div class="gear">
+                <div class="gear_1">
+                    <img src="influencer-gear/images/gear.png" alt="">
+                </div>
+                <div class="gear_2">
+                    <h2>
+                        Featured products at one place
+                    </h2>
+                    <p>
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                        consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                    </p>
+                    <a class="button" href="">
+                        JOin Now <i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
     </main>
-    <footer></footer>
+    <footer>
+         <h2>
+            Influencer products
+         </h2>
+         <p>
+            Copyright © 2025  influencer products
+         </p>
+         <h5>
+            All rights reserved
+         </h5>
+         <div class="icons">
+           <a href=""> <i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a>
+            <a href=""><i class="fa-brands fa-dribbble" style="color: #ffffff;"></i></a>
+            <a href=""><i class="fa-brands fa-twitter" style="color: #ffffff;"></i></a>
+            <a href=""><i class="fa-brands fa-youtube" style="color: #ffffff;"></i></a>
+         </div>
+    </footer>
 </body>
 
 </html>
